working on printing places to DOM

--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
+    <header></header>
+    <section></section>
+    <form>
+        <input type="hidden" id="placeId" value="" />
+        <fieldset class="fieldset">
+            <input type="text" name="placeOfInterestTitle" id="placeOfInterestTitle">
+        </fieldset>
+        <fieldset class="fieldset">
+        </fieldset>
+    </form>
+    <article id=output></article>
     <script src = /scripts/main.js></script>
+    
 </body>
 </html>
