not even printed to DOM

--- a/src/index.html
+++ b/src/index.html
@@ -6,15 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-    <header></header>
-    <section></section>
+    <header>Mira and her Ternary Travels</header>
+    
     <form>
-        <input type="hidden" id="placeId" value="" />
-        <fieldset class="fieldset">
-            <input type="text" name="placeOfInterestTitle" id="placeOfInterestTitle">
-        </fieldset>
-        <fieldset class="fieldset">
-        </fieldset>
+        <fieldset>
+        <h1 id="_name"></h1>
+        <p id="interest_description"></p>
+        <p id="interest_cost"></p>
+        <div id="dropdown">
+        <button id="dropbtn">dropdown</button>
+    </div>
+        <button id="edit_Place">Edit Place</button><button id="delete_Place">Delete</button>
+    </fieldset>
     </form>
     <article id=output></article>
     <script src = /scripts/main.js></script>
